<resources>
    <string name="app_name">Una App</string>


    <string name="action_settings">Settings</string>
    <string name="action_edit_group">Edit Group</string>
    <string name="action_logout">Logout</string>
    <string name="action_new">Create new group</string>
    <string name="action_inbox">Invite Inbox</string>
    <string name="action_search">Search</string>

    <string name="signup_error_message">Please make sure you enter a username, password, and email address</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Choose Picture from Gallery</item>
    </string-array>

    <string name="title_activity_create_group">createGroup</string>
    <string name="title_activity_view_group">ViewGroupActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_blog_list">BlogListActivity</string>
    <string name="title_activity_view_blog">ViewBlogActivity</string>
    <string name="title_activity_write_blog">WriteBlogActivity</string>
    <string name="title_activity_saved_blogs">SavedBlogsActivity</string>
    <string name="title_activity_select_user">SelectUserActivity</string>
    <string name="title_activity_calender">CalenderActivity</string>
    <string name="app_id">1662024020676437</string>
    <string name="title_activity_announcement">announcementActivity</string>
    <string-array name="user_choices">
        <item>Make this member into a Moderator</item>
        <item>Remove this member from this group</item>
    </string-array>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="title_activity_select_invite">SelectInviteActivity</string>

</resources>
