<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item android:id="@+id/action_new"
        android:icon="@drawable/ic_add_box_white_48dp"
        android:title="@string/action_new"
        app:showAsAction="always" />

    <item android:id="@+id/action_inbox"
        android:icon="@drawable/ic_inbox_white_48dp"
        android:title="@string/action_inbox"
        app:showAsAction="always" />

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/action_search"
        app:showAsAction="always" />





</menu>
